<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/dialog_background"
             android:orientation="vertical">

    <ImageView
        android:id="@id/closeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right|center"
        android:src="@drawable/close"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:layout_margin="35.0dip"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/AreYourSure"
            android:textColor="@color/darkBlue"
            android:textSize="18.0dip"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginTop="4.0dip"
            android:background="@color/darkGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/ClearCacheInformation"
            android:textColor="@color/darkBlue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="25.0dip"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_weight="0.5"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_weight="0.5"
            android:background="@drawable/button_selector"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</FrameLayout>