<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/fon"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30.0dip"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@id/changeFacebookAccount"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="16.0dip"
            android:background="@drawable/reports_item_selector"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6.0dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6.0dip"
                    android:text="@string/ChangeAnAccount"
                    android:textColor="@color/black"/>

                <com.facebook.widget.LoginButton
                    android:id="@id/settingsFacebookBtn"
                    android:layout_width="0.0dip"
                    android:layout_height="0.0dip"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30.0dip"
                    android:src="@drawable/blue_facebook_logo"
                    android:text="10 раз"
                    android:textColor="@color/ucellColor"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_margin="10.0dip"
                android:src="@drawable/arrow_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@id/changePhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:background="@drawable/reports_item_selector"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/ChangePhoneNumber"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_margin="10.0dip"
                android:src="@drawable/arrow_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@id/changeLanguage"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:background="@drawable/reports_item_selector"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/ChangeSystemLanguage"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_margin="10.0dip"
                android:src="@drawable/arrow_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@id/clearCache"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="16.0dip"
            android:background="@drawable/reports_item_selector"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/ClearCache"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_margin="10.0dip"
                android:src="@drawable/arrow_right"/>
        </FrameLayout>

        <FrameLayout
            android:id="@id/aboutApp"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_margin="16.0dip"
            android:background="@drawable/reports_item_selector"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/aboutApp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_margin="10.0dip"
                android:src="@drawable/arrow_right"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>